Apply Java coding standards